--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@auth/prisma-adapter": "^1.0.12",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.7.1",
+    "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "nodemailer": "^6.9.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
