--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
+    "@headlessui/react": "^1.7.18",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.10.1",
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -29,7 +30,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "postcss": "^8",
-    "prisma": "^5.9.1",
+    "prisma": "^5.10.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
