--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.12",
     "@headlessui/react": "^1.7.18",
+    "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.1",
     "bcrypt": "^5.1.1",
