--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.10.1",
+    "@vercel/speed-insights": "^1.0.10",
     "bcrypt": "^5.1.1",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
